added html and css styling

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
 
 <body>
-  <header class="hero">
-    <h1 class="app-title">Weather Dashboard</h1>
-
+    <div class ="row">
+    <header class="title bg-dark text-light sticky-top">
+    <h1>Weather Dashboard</h1>
+    </div>
   </header>
 
 
@@ -20,24 +22,24 @@
     <!-- Left Column-->
     <div class="col-12 col-md-4">
     <div class= "card">
-      <h3 class="card-header text-uppercase">Search for a City</h3>
+      <h3 class="">Search for a City:</h3>
       <form id="user-form" class="card-body">
-        <label class="form-label" for="username">City:</label>
+        <label class="form-label" for="username"></label>
         <input name="city" id="city" type="text" autofocus="true" class="form-input" />
-        <button type="submit" class="btn">Search</button>
+        <div class="row"></div>
+        <button type="submit" class="btn1">Search</button>
       </form>
       <div class="card">
-        <h3 class="card-header text-uppercase">Search by Topic</h3>
         <div class="card-body" id="language-buttons">
-          <button class="btn" data-language="austin">Austin</button>
-          <button class="btn" data-language="chicago">Chicago</button>
-          <button class="btn" data-language="new-york">New York</button>
-          <button class="btn" data-language="Orlando">Orlando</button>
-          <button class="btn" data-language="new-york">New York</button>
-          <button class="btn" data-language="san-francisco">San Francisco</button>
-          <button class="btn" data-language="seattle">Seattle</button>
-          <button class="btn" data-language="denver">Denver</button>
-          <button class="btn" data-language="Atlanta">Atlanta</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="austin">Austin</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="chicago">Chicago</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="new-york">New York</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="Orlando">Orlando</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="new-york">New York</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="san-francisco">San Francisco</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="seattle">Seattle</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="denver">Denver</button>
+          <button class="btn col-12 bg-secondary text-black" data-language="Atlanta">Atlanta</button>
 
 
   
